<resources>
    <string name="app_name">学英语</string>
    <string name="load_text">正在初始化....</string>
    <string name="sure">确定</string>
    <string name="cancel">取消</string>
    <string name="back">返回</string>
    <string name="quit">退出</string>
    <string name="choose_book">请选择要背的单词本</string>
    <string name="set_everyday_words">计划每日单词数目</string>
    <string name="know">认识</string>
    <string name="join_strange">加入生词本</string>
    <string name="unknow">不认识</string>
    <string name="class_test">随堂测验</string>

</resources>
