<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.englishwords.page.MainActivity"
        android:orientation="vertical"
        android:background="@color/white"
>
    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:orientation="horizontal">
        <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:orientation="vertical"
        >
            <ImageButton android:layout_width="30dp" android:layout_height="30dp"
                         android:background="@drawable/set" android:onClick="resetClick"
            />
            <TextView android:layout_width="match_parent" android:layout_height="match_parent"
                android:text="重置" android:textSize="10dp" android:textAlignment="center"
            />
        </LinearLayout>

        <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:layout_weight="1" android:textAlignment="center" android:textSize="20dp"
                  android:id="@+id/remeberinfor"
        />
        <Button android:layout_width="wrap_content" android:layout_height="30dp"
                android:id="@+id/follow_test" android:visibility="invisible" android:onClick="test"
                android:gravity="right" android:background="@color/white" android:text="@string/class_test"
                android:textSize="20dp" android:layout_gravity="right"
        />
    </LinearLayout>


    <FrameLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                 android:layout_marginTop="90dp"
    >

        <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/show_word_infor"
                android:textSize="20dp"
                android:textAlignment="center"
        />

        <ImageButton android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:background="#ffffff" android:src="@drawable/mic"
                     android:onClick="speakClick" android:layout_gravity="right"
                     android:layout_marginTop="70dp" android:id="@+id/speak"
        />
    </FrameLayout>

    <LinearLayout android:layout_width="match_parent" android:layout_height="fill_parent"
        android:gravity="bottom" android:orientation="vertical"
    >
        <FrameLayout android:layout_width="match_parent" android:layout_height="wrap_content">
            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="wrap_content" android:orientation="horizontal"
            >

                <Button android:layout_width="wrap_content" android:layout_height="wrap_content"
                        android:layout_gravity="bottom" android:layout_weight="7"
                        android:background="@drawable/mainpage_button"
                        android:text="@string/know" android:onClick="knowBtnClick" android:id="@+id/realize"
                />
                <Button android:layout_width="wrap_content" android:layout_height="wrap_content"
                        android:layout_gravity="bottom" android:layout_weight="1"
                        android:background="@drawable/mainpage_button"
                        android:text="@string/join_strange" android:id="@+id/join" android:onClick="JoinBtnClick"
                />
                <Button android:layout_width="wrap_content" android:layout_height="wrap_content"
                        android:layout_gravity="bottom" android:layout_weight="7"
                        android:background="@drawable/mainpage_button"
                        android:text="@string/unknow" android:onClick="unKnowBtnClick" android:id="@+id/forget"
                />
            </LinearLayout>
            <Button android:layout_width="match_parent" android:layout_height="wrap_content"
                    android:layout_gravity="bottom" android:background="@drawable/mainpage_button"
                    android:text="@string/back" android:id="@+id/back" android:visibility="invisible"
            android:onClick="backClick"
            />
        </FrameLayout>
    </LinearLayout>
</LinearLayout>
